Fixed ellipsis and overflow problems

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -485,36 +485,45 @@ body {
   box-shadow: 0px 3px 14px rgb(209, 209, 209);
   margin: 20px 0;
   cursor: pointer;
-  overflow: hidden;
 }
 .dish__name {
   display: flex;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   flex-direction: column;
   margin: 0;
   padding: 10px;
   width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 .dish__name__title {
   font-weight: bold;
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .dish__name__subtitle {
   display: flex;
   justify-content: space-between;
-  font-size: 14px;
+}
+.dish__name__subtitle__name {
   font-weight: normal;
   margin: 6px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .dish__name__subtitle__price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
   color: #353535;
   font-weight: bold;
   margin: 0 10px;
 }
 .dish__confirmation {
   width: 0%;
+  border-radius: 0px 10px 10px 0px;
   display: flex;
   background-color: #99E2D0;
   overflow: hidden;
