--- a/sass/main.scss
+++ b/sass/main.scss
@@ -320,32 +320,40 @@ body {
     box-shadow: 0px 3px 14px rgb(209, 209, 209);
     margin: 20px 0;
     cursor: pointer;
-    overflow: hidden;
 
     &__name {
         display: flex;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         flex-direction: column;
         margin: 0;
         padding: 10px;
         width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
 
         &__title {
             font-weight: bold;
             margin: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         &__subtitle {
             display: flex;
             justify-content: space-between;
-            font-size: 14px;
-            font-weight: normal;
-            margin: 6px 0;
+
+            &__name {
+                font-weight: normal;
+                margin: 6px 0;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
 
             &__price {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 14px;
                 color: $footer-gray;
                 font-weight: bold;
                 margin: 0 10px;
@@ -355,6 +363,7 @@ body {
 
     &__confirmation {
         width: 0%;
+        border-radius: 0px 10px 10px 0px;
         display: flex;
         background-color: $checkmark-color;
         overflow: hidden;
